# scrapy-practice

./: prompt.md  pyproject.toml  python.md  readme.md  xpath.md
crawler/crawler/: items.py  pipelines.py  settings.py
crawler/crawler/spiders/: quotes.py  quotes_spider.py
crawler/output/: quotes-2025-04-17T11-03-31+00-00.jsonl
js/: practice-generator.js  practice-iterator.js
practice/output/: sitemap-2025-04-18T07-07-52+00-00.jl
practice/practice/: settings.py
practice/practice/spiders/: sitemap_spider.py
